FLOE-128: Modified layout to use more Bootstrap grids. Hopefully this will fix issues on mobile devices.

--- a/demos/css/simpleEditor.css
+++ b/demos/css/simpleEditor.css
@@ -114,10 +114,6 @@ body {
         height: 30em;
     }
 
-    .fl-demo .fl-simpleEditor-insertVideo-urlLabel {
-        margin-left: 0.3em;
-    }
-
 }
 
 /* Bootstrap Medium width */
